test/error/patternbalance.luau
print(string.match("test", "test%b"))